--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,9 +39,11 @@ mundi_plugins = [
 dev = [
     "black",
     "twine",
+    "invoke",
     "pycountry",
     "coverage~=5.0",
     "pytest~=5.0",
+    "sphinx",
 ]
 
 [tool.black]
