Update sidekick API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ description-file = "README.rst"
 requires = [
     "pandas",
     "sqlalchemy",
-    "sidekick",
+    "sidekick.properties",
+    "sidekick.functions",
+    "sidekick.cache",
     "click",
 ]
 
